--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,20 @@
+
 {
   "manifest_version": 3,
-  "name": "AdFriend: Positive Vibes Only!",
+  "name": "Ad Motivator",
   "version": "1.0",
-  "description": "Replaces ads with motivational quotes, activity reminders, and more!",
-  "permissions": [
-    "activeTab",
-    "storage",
-    "scripting"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
-  "options_page": "options.html",
-  "background": {
-    "service_worker": "background.js"
-  },
+  "description": "Replaces ads with motivational messages",
+  "permissions": ["activeTab"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "css": ["style.css"]
+      "css": ["styles.css"]
     }
-  ]
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
