--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,23 @@
-
 {
   "manifest_version": 3,
   "name": "Ad Motivator",
   "version": "1.0",
   "description": "Replaces ads with motivational messages",
-  "permissions": ["activeTab"],
+  "permissions": [
+    "activeTab"
+  ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "css": ["styles.css"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "run_at": "document_end",
+      "js": [
+        "content.js"
+      ],
+      "css": [
+        "styles.css"
+      ]
     }
   ],
   "icons": {
