--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "1.0",
   "description": "Replaces ads with motivational messages",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "management"
   ],
   "content_scripts": [
     {
@@ -24,5 +25,8 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "action": {
+    "default_popup": "popup.html"
   }
 }
