--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "manifest_version": 3,
   "name": "Ad Motivator",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Replaces ads with motivational messages",
   "permissions": [
-    "activeTab",
-    "management"
+    "storage",
+    "activeTab"
   ],
   "content_scripts": [
     {
       "matches": [
         "<all_urls>"
       ],
-      "run_at": "document_end",
+      "run_at": "document_idle",
       "js": [
         "content.js"
       ],
