Add impact view

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,12 @@
   "description": "Replaces ads with motivational messages",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "scripting"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": [
